Fix some icon alignment issues

--- a/themes/default/css/chat.css
+++ b/themes/default/css/chat.css
@@ -46,6 +46,9 @@
 .chat-multi-tab {
 	font-size: 0.9em;
 }
+.chat-multi-tab * {
+	vertical-align: middle;
+}
 
 /* Chatrooms */
 
